@@ -108,7 +108,7 @@ limitations under the License.
                 android:layout_toRightOf="@+id/emojiButton"
                 android:paddingRight="10dp"
                 android:ems="10"
-                android:hint="@string/type_message"
+                android:hint="@string/compose_tweet_hint"
                 android:inputType="textCapSentences|textMultiLine|textShortMessage"
                 android:maxLines="8"
                 android:minHeight="50dp"
